-fix issue with delete file