@@ -1,19 +1,16 @@
 package node;
 
-import shared.FileRecord;
 import shared.NodeInterface;
+import shared.FileRecord;
 
 import java.io.*;
-
+import java.nio.file.*;
 import java.rmi.RemoteException;
 import java.rmi.server.UnicastRemoteObject;
 import java.util.*;
-import java.util.concurrent.locks.ReentrantLock;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.locks.ReentrantLock;
 
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.StandardOpenOption;
 
 public class NodeImpl extends UnicastRemoteObject implements NodeInterface {
 
@@ -41,62 +38,57 @@ public class NodeImpl extends UnicastRemoteObject implements NodeInterface {
         }
 
     }
+@Override
+public boolean storeFile(FileRecord file) {
+    ReentrantLock lock = fileLocks.computeIfAbsent(file.getFileName(), k -> new ReentrantLock());
+    lock.lock();
+    try {
+        // (أ) حفظ الملف الفعلي
+        Path filePath = Paths.get(storagePath, file.getFileName());
+        Files.write(filePath, file.getContent());
 
-    @Override
-    public boolean storeFile(FileRecord file) {
-        ReentrantLock lock = fileLocks.computeIfAbsent(file.getFileName(), k -> new ReentrantLock());
-        lock.lock();
+        // (ب) حفظ ملف metadata باسم "<fileName>.meta" يحتوي قسم الملف
+        Path metaPath = Paths.get(storagePath, file.getFileName() + ".meta");
+        Files.writeString(metaPath, file.getDepartment(), StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
 
-        try {
-            // حفظ الملف الفعلي
-            FileOutputStream fos = new FileOutputStream(storagePath + "/" + file.getFileName());
-            fos.write(file.getContent());
-            fos.close();
-
-            // حفظ ملف metadata فيه اسم القسم
-            FileWriter metaWriter = new FileWriter(storagePath + "/" + file.getFileName() + ".meta");
-            metaWriter.write(file.getDepartment());
-            metaWriter.close();
-
-            System.out.println("[" + nodeName + "] Stored file: " + file.getFileName());
-            return true;
-        } catch (IOException e) {
-            System.err.println("[" + nodeName + "] Error storing file: " + e.getMessage());
-            return false;
-        } finally {
-            lock.unlock();
-        }
+        System.out.println("[" + nodeName + "] Stored file: " + file.getFileName() + " (dept: " + file.getDepartment() + ")");
+        return true;
+    } catch (IOException e) {
+        System.err.println("[" + nodeName + "] Error storing file: " + e.getMessage());
+        return false;
+    } finally {
+        lock.unlock();
     }
+}
 
 
-    @Override
-    public FileRecord retrieveFile(String fileName) {
-        ReentrantLock lock = fileLocks.computeIfAbsent(fileName, k -> new ReentrantLock());
-        lock.lock();
 
-        try {
-            File file = new File(storagePath + "/" + fileName);
-            if (!file.exists()) return null;
+@Override
+public FileRecord retrieveFile(String fileName) {
+    ReentrantLock lock = fileLocks.computeIfAbsent(fileName, k -> new ReentrantLock());
+    lock.lock();
+    try {
+        Path filePath = Paths.get(storagePath, fileName);
+        if (!Files.exists(filePath)) return null;
 
-            FileInputStream fis = new FileInputStream(file);
-            byte[] content = fis.readAllBytes();
-            fis.close();
+        // (أ) قراءة المحتوى
+        byte[] content = Files.readAllBytes(filePath);
 
-            // قراءة القسم من ملف metadata
-            String department = "unknown";
-            File meta = new File(storagePath + "/" + fileName + ".meta");
-            if (meta.exists()) {
-                department = new String(Files.readAllBytes(meta.toPath())).trim();
-            }
+        // (ب) قراءة القسم من ملف "<fileName>.meta"
+        Path metaPath = Paths.get(storagePath, fileName + ".meta");
+        String department = Files.exists(metaPath)
+            ? Files.readString(metaPath).trim()
+            : "unknown";
 
-            return new FileRecord(fileName, department, content);
-        } catch (IOException e) {
-            System.err.println("[" + nodeName + "] Error retrieving file: " + e.getMessage());
-            return null;
-        } finally {
-            lock.unlock();
-        }
+        return new FileRecord(fileName, department, content);
+    } catch (IOException e) {
+        System.err.println("[" + nodeName + "] Error retrieving file: " + e.getMessage());
+        return null;
+    } finally {
+        lock.unlock();
     }
+}
+
 
 
 
@@ -140,4 +132,23 @@ public class NodeImpl extends UnicastRemoteObject implements NodeInterface {
     public String getNodeName() {
         return nodeName;
     }
+
+    @Override
+    public void markAsDeleted(String fileName) throws RemoteException {
+    try {
+        File deletedList = new File(storagePath + "/deleted.txt");
+        Files.write(
+            deletedList.toPath(),
+            (fileName + "\n").getBytes(),
+            Files.exists(deletedList.toPath())
+                ? java.nio.file.StandardOpenOption.APPEND
+                : java.nio.file.StandardOpenOption.CREATE
+        );
+        System.out.println("[" + nodeName + "] Marked as deleted: " + fileName);
+    } catch (IOException e) {
+        System.err.println("[" + nodeName + "] Failed to mark deletion: " + e.getMessage());
+    }
+}
+
+
 }
